finish transform framwork main flow coding; still needed: autogeneratation of plugin configuration/test/static method instrument